--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,6 +40,7 @@ spring:
           jdbcDataSource: jdbc:dataSource
           successRoute: file:data/output?fileName=Success.txt
           healthRoute: timer:healthRoute?period=10s
+          healthEndpoint:     http://localhost:8095/health
 
 
 message: DEV ENV
